feat: better log messages
coloured output, list-styled track names display
with some more minor changes

--- a/mu.cabal
+++ b/mu.cabal
@@ -79,7 +79,8 @@ executable mu
                       turtle,
                       containers,
                       dhall,
-                      text
+                      text,
+                      ansi-terminal
 
     -- Directories containing source files.
     hs-source-dirs:   app
