fix recursive definition of `createFile`

--- a/mu.cabal
+++ b/mu.cabal
@@ -65,7 +65,8 @@ executable mu
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    other-modules: Config
+    other-modules:    Config
+                    , Update
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
@@ -79,7 +80,8 @@ executable mu
                       containers,
                       text,
                       ansi-terminal,
-                      yaml
+                      yaml,
+                      unix
 
     -- Directories containing source files.
     hs-source-dirs:   app
